--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,1 +1,49 @@
+@import
+url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Eagle+Lake&family=Island+Moments&family=Nothing+You+Could+Do&family=Sue+Ellen+Francisco&family=Tagesschrift&family=Tangerine:wght@400;700&display=swap');
 
+/* .tagesschrift-regular {
+  font-family: "Tagesschrift", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+ */
+
+/* .tangerine-regular {
+  font-family: "Tangerine", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+ */
+
+/* .bilbo-swash-caps-regular {
+  font-family: "Bilbo Swash Caps", cursive;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* .nothing-you-could-do-regular {
+  font-family: "Nothing You Could Do", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+ */
+
+/* .sue-ellen-francisco-regular {
+  font-family: "Sue Ellen Francisco", cursive;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* .island-moments-regular {
+  font-family: "Island Moments", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+ */
+
+/* .eagle-lake-regular {
+  font-family: "Eagle Lake", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+ */
