--- a/styles/global.css
+++ b/styles/global.css
@@ -74,7 +74,7 @@ hr {
 /* === Navbar Font Overrides === */
 /* Font for brand title (e.g., "Vaeloria Info Hub") */
 .navbar-brand {
-  font-family: 'Tagesschrift', system-ui;
+  font-family: "Tangerine", cursive;
   font-weight: 400;
   font-style: normal;
 }
