--- a/styles/global.css
+++ b/styles/global.css
@@ -75,6 +75,7 @@ hr {
 /* Font for brand title (e.g., "Vaeloria Info Hub") */
 .navbar-brand {
   font-family: "Tangerine", cursive;
+  font-size: 2.5rem;
   font-weight: 400;
   font-style: normal;
 }
