--- a/styles/global.css
+++ b/styles/global.css
@@ -74,10 +74,14 @@ hr {
 /* === Navbar Font Overrides === */
 /* Font for brand title (e.g., "Vaeloria Info Hub") */
 .navbar-brand {
-  font-family: "Tangerine", cursive;
-  font-size: 2.5rem;
+  font-family: 'Tangerine', cursive;
+  font-size: 2.5rem;         /* Make the font larger */
   font-weight: 400;
   font-style: normal;
+  line-height: 1;            /* Prevent vertical stretching */
+  padding-top: 0;            /* Reduce extra padding */
+  padding-bottom: 0;
+  vertical-align: middle;    /* Align the text nicely inside the navbar */
 }
 
 /* Font for all navbar links and dropdown items */
