--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,5 @@
 @import
-url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Eagle+Lake&family=Island+Moments&family=Nothing+You+Could+Do&family=Sue+Ellen+Francisco&family=Tagesschrift&family=Tangerine:wght@400;700&display=swap');
+url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Eagle+Lake&family=Island+Moments&family=Just+Another+Hand&family=Nothing+You+Could+Do&family=Pirata+One&family=Sue+Ellen+Francisco&family=Tagesschrift&family=Tangerine:wght@400;700&display=swap');
 
 /* .tagesschrift-regular {
   font-family: "Tagesschrift", system-ui;
@@ -47,3 +47,15 @@ url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Eagle+Lake
   font-style: normal;
 }
  */
+
+/* .just-another-hand-regular {
+  font-family: "Just Another Hand", cursive;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* .pirata-one-regular {
+  font-family: "Pirata One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+} */
