--- a/styles/npc-index.css
+++ b/styles/npc-index.css
@@ -18,7 +18,7 @@
 
 .npc-story {
   font-family: "Just Another Hand", cursive;
-  font-size: 4rem;
+  font-size: 4rem !important;
   font-weight: 400;
   font-style: normal;
 }
