--- a/styles/npc-index.css
+++ b/styles/npc-index.css
@@ -16,9 +16,9 @@
   font-style: normal;
 }
 
-.npc-story {
+.npc-story p {
   font-family: "Just Another Hand", cursive;
-  font-size: 8rem !important;
+  font-size: 6rem !important;
   font-weight: 400;
   font-style: normal;
 }
