--- a/styles/npc-index.css
+++ b/styles/npc-index.css
@@ -18,7 +18,7 @@
 
 .npc-story p {
   font-family: "Just Another Hand", cursive;
-  font-size: 6rem !important;
+  font-size: 6rem;
   font-weight: 400;
   font-style: normal;
 }
