--- a/styles/npc-index.css
+++ b/styles/npc-index.css
@@ -4,7 +4,7 @@
   font-style: normal;
 }
 
-.npc-ref-place, npc-story p {
+.npc-ref-place, .npc-story p {
   font-family: "Bilbo Swash Caps", cursive;
   font-weight: 400;
   font-style: normal;
