--- a/styles/npc-index.css
+++ b/styles/npc-index.css
@@ -17,7 +17,7 @@
 }
 
 .npc-story p {
-  font-family: "Sue Ellen Francisco", cursive;
+  font-family: "Tagesschrift", system-ui;
   font-size: 1.5rem;
   font-weight: 400;
   font-style: normal;
