--- a/styles/dplore-index.css
+++ b/styles/dplore-index.css
@@ -2,6 +2,78 @@ p {
     font-family: "Tagesschrift", system-ui;
     font-weight: 400;
     font-style: normal;
+    text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+}
+
+.accordion-section {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/vault-of-knowing.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.accordion-section-wars {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/battlefield.png') top center no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.accordion-section-history {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/history-main.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.accordion-section-creation {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/creation3.1.png') center/cover no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: 50% 60%;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.accordion-section-dplore {
+        background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/deep-lore2.png') center/cover no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: 50% 60%;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.ember-wars {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/ember-wars.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.empire-wars {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/empire-wars.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.ironwood-wars {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/ironwood-wars.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+
+.twilight-wars {
+    background: linear-gradient(rgba(10, 10, 15, 0.3), rgba(10, 10, 15, 0.4)), url('../images/twilight-wars.png') center/cover no-repeat;
+    background-attachment: fixed;
+    padding: 2rem;
+    min-height: 100vh;
+}
+.war-story {
+    backdrop-filter: blur(2px);
+    background-color: rgba(0, 0, 0, 0.4)
 }
 
 .lore-title {
@@ -10,6 +82,7 @@ p {
     font-style: normal;
     font-size: 4rem;
     margin-bottom: 5px;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
 }
 
 .lore-subtitle {
@@ -18,17 +91,27 @@ p {
     font-style: normal;
     font-size: 2.3rem;
     margin-top: 5px;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
 }
 
 
 .accordion-button {
-    background-color: #282842;
-    color: #a1c4fd;
-    
+    background-color: rgba(20, 20, 30, 0.2);
+    color: #f5f5f5;
+    backdrop-filter: blur(3px);
+    border: none;
 }
 
 .accordion-body {
-    background-color: #151520;
+    background-color: rgba(0, 0, 0, 0.4) !important;
+    backdrop-filter: blur(3px);
+    color: #f5f5f5;
+    border-radius: 8px;
+    padding: 1rem;
+}
+
+.accordion-item, .accordion-collapse {
+    background-color: transparent
 }
 
 .accordion-item {
